# sendfile-cli

./: .gitignore  Cargo.toml  README.md  machine.ia
src/: client.rs  common.rs  driver.rs  lib.rs  network.rs  server.rs  streamer.rs  tls.rs
src/packet/: accept.rs  action.rs  end_file.rs  file_data.rs  file_info.rs  finish.rs  mod.rs  packet.rs  reject.rs  send.rs  start_file.rs  util.rs
test-data/: file2.txt
