[package]
name = "sendfile-cli"
version = "0.1.0"
authors = ["Tri Nguyen <tri@trinnguyen.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = { git = "https://github.com/ctz/rustls.git", branch = "main", features = ["default", "dangerous_configuration"] }
rustls-pemfile = "0.2.1"
webpki = "0.22.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
getopts = "0.2"
env_logger = "0.8.3"
rcgen = "0.8.11"

[[bin]]
name = "main"